--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
       <!-- SECTION:CONTACT-START -->
       <section id="contact" class="section section-contact" aria-labelledby="contact-heading">
         <div class="container">
-          <h2 id="contact-heading" class="section-title">聯絡我（占位內容）</h2>
+          <h2 id="contact-heading" class="section-title">聯絡我</h2>
           <p>這裡是 Contact 區的占位內容，將來會使用 Section SDD 產生正式的聯絡資訊與社群連結。</p>
           <p>開發者請將產生後的 section 程式碼完整貼到這兩個註解之間以完成替換。</p>
 
